--- a/studyCssWorld/4盒子尺寸/index.css
+++ b/studyCssWorld/4盒子尺寸/index.css
@@ -139,3 +139,23 @@ h3 span {
 .demo-text1 p {
   margin-left: 120px;
 }
+
+.m-f {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  background: #f7f7f7;
+  margin: auto;
+}
+
+.m-s {
+  position: absolute;
+  top: 0;
+  right: 0; 
+  left: 0;
+  bottom: 0;
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  margin: auto;
+}
