--- a/studyCssWorld/5内联/index.css
+++ b/studyCssWorld/5内联/index.css
@@ -6,3 +6,15 @@
 body {
   padding: 30px;
 }
+
+.test1 {
+  font-size: 40px;
+  height: 100px;
+  background-color: red;
+  vertical-align: top;
+  line-height: 100px;
+}
+
+.test1 img {
+  width: 100px;
+}
